--- a/sign-up.html
+++ b/sign-up.html
@@ -1,116 +1,98 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<meta name="apple-mobile-web-app-capable" content="yes">
-<title></title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<header>
-	<a class="returnBack" href="index.html"></a>
-	<div class="signInUp">
-    	<a href="javascript:;">注册</a>
-        <a href="sign-in.html">登录</a>
-   </div>
-    <!-- <nav class="menu">
-    	<div>
-        	<a href="index.html">首页</a>
-            <a href="sign-up.html">注册</a>
-            <a href="sign-in.html">登录</a>
-            <a href="guide-line.html">指南</a>
-            <a href="tel:4009099888">问客服</a>
-            <a href="" class="app-link">下载APP</a>
-        </div>
-        <div>
-        	<a href="index.html">首页</a>
-            <a href="guide-line.html">指南</a>
-            <a href="tel:4009099888">问客服</a>
-            <a href="user-account.html">我的账户</a>
-            <a href="javascript:;">退出账户</a>
-            <a href="" class="app-link">下载APP</a>
-        </div>
-    </nav> -->
-</header>
-<section class="banner">
-	<img src="images/banner-signup.jpg">
-</section>
-<div class="signForm">
-	<div class="xpRules">
-    	新手福利万元体验金活动规则
-        <article>
-        	<p>
-　　1.活动时间：2014年11月19日11:00至2015年2月28日24:00；
-<br>
-　　2.体验金是投哪网的一种虚拟货币，不显示在用户的可用资金中，本金不可提现，仅限投资体验标，不可投资其他标的；
-<br>
-　　3.使用体验金投资体验标所得收益，将作为实际收益金额，赠送到用户的投哪账户中，可提现；
-<br>
-　　4.新手福利活动赠送的体验金，对应体验标利率是12%，收益期是3天,有效期为2014年11月19日-2015年3月31日；
-<br>
-　　5.此活动仅限投哪网PC站点（touna.cn）、投哪网理财app、移动站点（m.touna.cn）新注册用户参与；
-<br>
-　　6.本活动解释权归投哪网所有，对于恶意刷奖的行为，投哪网有权取消其活动资格。
-</p>
-        </article>
-    </div>
-	<div class="iptbox">
-    <label>用户名</label>
-        <input id="uname" name="" class="uname" type="text" placeholder="4-20位字符，不能以数字开头">
-    </div>
-    <div class="iptbox">
-    	<label>手机</label>
-        <input id="phone" name="" type="text" placeholder="请输入手机号">
-    </div>
-    <div class="iptbox idCodeBox">
-    	<label>验证码</label>
-        <input id="validCode" name="" maxlength="6" stype="text" placeholder="请输入验证码">
-        <input id="idCode" type="button" name="validCode" class="idCode flagCode" disabled="disabled" value="获取验证码">
-    </div>
-    <div class="iptbox">
-    	<label>密码</label>
-        <input id="pw" name="" type="password" placeholder="6-20位字符，须同时含字母和数字">
-    </div>
-    <div class="iptbox">
-    	<label>确认</label>
-        <input id="pw-confirm" name="" type="password" placeholder="再输入一次密码">
-    </div>
-    <div class="mg-0-15">
-    	<br><br>
-        <button class="btnBlueBig regBtn">注册领奖</button>
+    <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title></title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <header>
+        	<a class="returnBack" href="index.html"></a>
+        	<div class="signInUp">
+            	<a href="javascript:;">注册</a>
+                <a href="sign-in.html">登录</a>
+           </div>
+        </header>
+        <section class="banner">
+        	<img src="images/banner-signup.jpg">
+        </section>
+        <div class="signForm">
+        	<div class="xpRules">
+            	新手福利万元体验金活动规则
+                <article>
+                	<p>
+        　　1.活动时间：2014年11月19日11:00至2015年2月28日24:00；
         <br>
-        <span class="fs14">注册表示您同意 <a href="agreement.html" class="fColor2">《使用规则》</a></span>
-        <article class="mod mg-15-5">
-        	<p class="text-common">注册信息填写提示<br>
-            　　1、为保护您的隐私，用户名不要使用您的真实姓名或含有您的手机号；<br>
-            　　2、用户名为4-20位字符，使用字母或数字，且不能以数字开头，注册成功后不能修改用户名；<br>
-            　　3、登陆密码为6-20位，必须同时含有字母和数字，可以有特殊字符，不能有空格。</p>
-        </article>
-    </div>
-</div>
-<aside class="guide-DLApp">
-	<a href="guide-line.html">投哪指南</a>
-    <a href="" class="app-link">APP下载</a>
-</aside>
-<footer>
-	<i class="logo-footer"></i><br>
-    深圳投哪金融服务有限公司<br>
-    Copyright Reserved 2011-2015<br>
-    <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
-</footer>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.md5.js"></script>
-<script type="text/javascript" src="js/navigation.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-</body>
+        　　2.体验金是投哪网的一种虚拟货币，不显示在用户的可用资金中，本金不可提现，仅限投资体验标，不可投资其他标的；
+        <br>
+        　　3.使用体验金投资体验标所得收益，将作为实际收益金额，赠送到用户的投哪账户中，可提现；
+        <br>
+        　　4.新手福利活动赠送的体验金，对应体验标利率是12%，收益期是3天,有效期为2014年11月19日-2015年3月31日；
+        <br>
+        　　5.此活动仅限投哪网PC站点（touna.cn）、投哪网理财app、移动站点（m.touna.cn）新注册用户参与；
+        <br>
+        　　6.本活动解释权归投哪网所有，对于恶意刷奖的行为，投哪网有权取消其活动资格。
+        </p>
+                </article>
+            </div>
+        	<div class="iptbox">
+            <label>用户名</label>
+                <input id="uname" name="" class="uname" type="text" placeholder="4-20位字符，不能以数字开头">
+            </div>
+            <div class="iptbox">
+            	<label>手机</label>
+                <input id="phone" name="" type="text" placeholder="请输入手机号">
+            </div>
+            <div class="iptbox idCodeBox">
+            	<label>验证码</label>
+                <input id="validCode" name="" maxlength="6" stype="text" placeholder="请输入验证码">
+                <input id="idCode" type="button" name="validCode" class="idCode flagCode" disabled="disabled" value="获取验证码">
+            </div>
+            <div class="iptbox">
+            	<label>密码</label>
+                <input id="pw" name="" type="password" placeholder="6-20位字符，须同时含字母和数字">
+            </div>
+            <div class="iptbox">
+            	<label>确认</label>
+                <input id="pw-confirm" name="" type="password" placeholder="再输入一次密码">
+            </div>
+            <div class="mg-0-15">
+            	<br><br>
+                <button class="btnBlueBig regBtn">注册领奖</button>
+                <br>
+                <span class="fs14">注册表示您同意 <a href="agreement.html" class="fColor2">《使用规则》</a></span>
+                <article class="mod mg-15-5">
+                	<p class="text-common">注册信息填写提示<br>
+                    　　1、为保护您的隐私，用户名不要使用您的真实姓名或含有您的手机号；<br>
+                    　　2、用户名为4-20位字符，使用字母或数字，且不能以数字开头，注册成功后不能修改用户名；<br>
+                    　　3、登陆密码为6-20位，必须同时含有字母和数字，可以有特殊字符，不能有空格。</p>
+                </article>
+            </div>
+        </div>
+        <aside class="guide-DLApp">
+        	<a href="guide-line.html">投哪指南</a>
+            <a href="" class="app-link">APP下载</a>
+        </aside>
+        <footer>
+        	<i class="logo-footer"></i><br>
+            深圳投哪金融服务有限公司<br>
+            Copyright Reserved 2011-2015<br>
+            <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
+        </footer>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.md5.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
+        <script type="text/javascript" src="js/commonReg.js"></script>
+        <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>
+    </body>
 </html>
