fixed bugs & update pages

--- a/about-touna.html
+++ b/about-touna.html
@@ -37,7 +37,7 @@
     <article class="text-common">　　2014年6月，投哪网获得广发证券全资子公司和直投平台广发信德的战略投资，同时与其母公司广发证券达成战略合作关系。投哪网成为华南地区首家获得投资的P2P平台，也是国内首家与券商战略合作的平台。</article>
 </section>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
