--- a/expense.html
+++ b/expense.html
@@ -160,7 +160,7 @@ pc端及app端充值免手续费，充值及时到账。
 　　5、投哪网拥有最终解释权。 
 </aside>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
