--- a/guide-line.html
+++ b/guide-line.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-	<a class="returnBack" onclick="history.go(-1);"></a>
+	<a class="returnBack" onClick="history.go(-1);"></a>
     <h2 class="pageTitle">投哪指南</h2>
 	<nav class="menu">
     	<div>
@@ -48,7 +48,7 @@
     </ul>
 </section>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
