--- a/sign-up.html
+++ b/sign-up.html
@@ -76,12 +76,12 @@
             <a href="" class="app-link">APP下载</a>
         </aside>
         <footer>
-        	<i class="logo-footer"></i><br>
+        	<a href="index.html" class="logo-footer"></a><br>
             深圳投哪金融服务有限公司<br>
             Copyright Reserved 2011-2015<br>
             <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
         </footer>
-        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.10.1/jquery-1.10.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.md5.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/commonReg.js"></script>
