--- a/user-account.html
+++ b/user-account.html
@@ -60,19 +60,20 @@
 <a href="about-exp.html" class="mg-0-15">如何使用体检金投资体验标？</a>
 <aside class="guide-DLApp">
 	<a href="guide-line.html">投哪指南</a>
-    <a href="">APP下载</a>
+    <a href="" class="app-link">APP下载</a>
 </aside>
 <section class="banner">
 	<img src="images/banner2.png">
 </section>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
 </footer>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/commonAcc.js"></script>
 <script type="text/javascript">
     $(function() {
         Webapp.postLoadData('/auth.do', {'method': 'isLogin'},
