--- a/about-exp.html
+++ b/about-exp.html
@@ -56,7 +56,7 @@
     <article class="text-common">4.本活动解释权归投哪网所有，对于恶意刷奖的行为，投哪网有权取消其活动资格。</article>
 </section>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
