--- a/guide-line-cztx.html
+++ b/guide-line-cztx.html
@@ -104,7 +104,7 @@
     </ul>
 </section>
 <footer>
-	<i class="logo-footer"></i><br>
+	<a href="index.html" class="logo-footer"></a><br>
     深圳投哪金融服务有限公司<br>
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
