--- a/index.html
+++ b/index.html
@@ -81,15 +81,16 @@
             <i class="ivtProd-prev-btn"></i>
             <i class="ivtProd-next-btn"></i>
             <div class="investmentProduct">
-            	<ul class="ivtProdList">
-                	<li class="cur">
-                    	<i>投</i>
-                        投投乐
-                    </li>
-                    <li>
-                    	<i>多</i>
+            	<ul class="ivtProdList">               	
+                    <li class="cur">
+                        <i>多</i>
                         多多盈
                     </li>
+                    <li>
+                        <i>过</i>
+                        过年宝
+                    </li>
+                    
                     <li>
                     	<i>车</i>
                         旺车贷
@@ -102,13 +103,18 @@
                     	<i>薪</i>
                         旺薪贷
                     </li>
+                    <li>
+                        <i>投</i>
+                        投投乐
+                    </li>
                 </ul>
             </div>
-        	<div class="ivtProdCon text-common"><b>投投乐：</b>大券商资管计划质押产品，期限短，免管理费</div>
             <div class="ivtProdCon text-common"><b>多多盈：</b>股票配资产品，实时监管，安全可靠</div>
+            <div class="ivtProdCon text-common"><b>过年宝：</b>门槛低、期限短、收益高，贺年精选好标！</div>
             <div class="ivtProdCon text-common"><b>旺车贷：</b>小微企业车辆抵押贷款产品，信誉好，高盈利</div>
             <div class="ivtProdCon text-common"><b>旺楼贷：</b>私营业主不动产抵押贷款产品，信誉好</div>
             <div class="ivtProdCon text-common"><b>旺薪贷：</b>工薪阶层信用贷款，多重风控，严格审核</div>
+            <div class="ivtProdCon text-common"><b>投投乐：</b>大券商资管计划质押产品，期限短，免管理费</div>
         </section>
         <section class="mod2 partnership">
             <h2 class="title-common">合作伙伴</h2>
