--- a/list.html
+++ b/list.html
@@ -74,7 +74,9 @@ li a:hover i {
   
   <li> <a href="expense.html" target="_blank">资费说明</a> </li>
   
+  <!--li> <a href="rapid-borrowing.html" target="_blank">快速借款</a> </li>
   
+  <li> <a href="stock.html" target="_blank">股票配资</a> </li-->
   
   
   
