--- a/sign-up.html
+++ b/sign-up.html
@@ -23,13 +23,13 @@
             	新手福利万元体验金活动规则
                 <article>
                 	<p>
-        　　1.活动时间：2014年11月19日11:00至2015年2月28日24:00；
+        　　1.活动时间：2014年11月19日11:00至2015年3月31日24:00；
         <br>
         　　2.体验金是投哪网的一种虚拟货币，不显示在用户的可用资金中，本金不可提现，仅限投资体验标，不可投资其他标的；
         <br>
         　　3.使用体验金投资体验标所得收益，将作为实际收益金额，赠送到用户的投哪账户中，可提现；
         <br>
-        　　4.新手福利活动赠送的体验金，对应体验标利率是12%，收益期是3天,有效期为2014年11月19日-2015年3月31日；
+        　　4.新手福利活动赠送的体验金，对应体验标利率是12%，收益期是3天,有效期为2014年11月19日-2015年4月30日；
         <br>
         　　5.此活动仅限投哪网PC站点（touna.cn）、投哪网理财app、移动站点（m.touna.cn）新注册用户参与；
         <br>
@@ -48,7 +48,7 @@
             <div class="iptbox idCodeBox">
             	<label>验证码</label>
                 <input id="validCode" name="" maxlength="6" stype="text" placeholder="请输入验证码">
-                <input id="idCode" type="button" name="validCode" class="idCode flagCode" disabled="disabled" value="获取验证码">
+                <input id="idCode" type="button" name="validCode" class="idCode flagCode" value="获取验证码">
             </div>
             <div class="iptbox">
             	<label>密码</label>
