--- a/index.html
+++ b/index.html
@@ -138,42 +138,16 @@
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript">   
-            (function() {
-                Webapp.postLoadData('/auth.do', {'method': 'isLogin'},
+            (function() {                 
+                Webapp.postLoadData('/borrow.do', {'method': 'tradeStat'},
                     function(data) {
-                        if(!data.result) {
-                            $("header .menu").click(function() {
-                                $("div",this).eq(0).slideToggle(100);
-                            });
-                            $('.topLogin').show();
-                        } else {
-                            $("header .menu").click(function() {
-                                $("div",this).eq(1).slideToggle(100);
-                            });
-                            $('.topLogin').html('账户').attr('href', 'user-account.html');
-                        }    
-                    }, 
+                        $('.deal').html('<b>' + (data.result.deal_account/10000).toString().substr(0, 5) + '</b> 亿元');
+                        $('.earn').html('<b>' + data.result.earn_money + '</b> 万元');
+                    },
                     function(e) {
-                    
-                });
-                
-                var today = new Date();
-                var url = "/jsonfile/index_stat.html?t=" + today.getFullYear() + today.getMonth() + 1 + today.getDate();
-                var timeOut = false; var ok = false;    
-                $.getJSON(url, function(jsondata) {
-                     if(!timeOut){                               
-                        ok = true;
-                        console.log(jsondata);
-                        $('.deal').html('<b>' + (jsondata.deal_account/10000).toString().substr(0, 5) + '</b> 亿元');
-                        $('.earn').html('<b>' + jsondata.earn_money + '</b> 万元')
-                    }        
-                });
-                setTimeout(function(){              
-                    if(!ok) {           
-                        timeOut = true;         
-                        if(err_handle) err_handle(0);            
+
                     }
-                },10000);
+                );
 
                 var _hmt = _hmt || [];
                 var hm = document.createElement("script");
