add banner & data show panel

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,18 @@
         </nav>
     </header>
 
+    <section class="banner">
+        <img src="i/banner.png">
+        <a class="am-btn am-btn-danger am-btn-xs am-radius" href="sign-up.html">注册有礼</a>
+    </section>
+
+    <section class="show-panel">
+        <span>TITLE</span>
+        <span>TITLE</span>
+        <span>DATA</span>
+        <span>DATA</span>
+    </section>
+
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/amazeui.min.js"></script>
     <script src="js/main.js"></script>
